--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
     </section>
 
     <footer>
-        <div class="d-flex justify-content-center"><h4>Made by Pravin Patil</h4></div>
+        <div class="d-flex justify-content-center"><h4>Made by Mayur Patil</h4></div>
         <div id="footer-row-1">
           <div id="footer__table__1">
             <h5>Useful links</h5>
